# Online_Market_Backend

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  api_endpoints.md  docker.compose.dev.yml  docker.compose.prod.yml  docker.compose.yml  entrypoint.sh  jest.config.js  manage.py  package.json  pyproject.toml  requirements.txt  server.js  server.py
campus_delivery/: asgi.py  settings.py  urls.py  wsgi.py
config/: db.js  redis.js  socket.js
controllers/: adminController.js  authController.js  cacheController.js  cartsContoller.js  complaintController.js  deliveryController.js  payments.js  productController.js  serviceController.js  vendorController.js
core_admin/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
delivery/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
middleware/: authMiddleware.js  errorMiddleware.js  payments.js
models/: Product.js  User.js  carts.js  complaints.js  delivery.js  notification.js  payments.js  services.js  vendor.js
nginx/: nginx.conf
notifications/: apps.py  consumers.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
orders/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
payment/: models.py  serializers.py  tests.py  urls.py  views.py
products/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
routes/: admin.js  auth.js  complaints.js  deliverys.js  notification.js  orders.js  payments.js  products.js  services.js  vendor.js
tests/: setup.js  (+1 more)
(+65 files in other folders)
